# go/ansar-broker/internal/docs/swagger.json
@@ -38,6 +38,58 @@
                 }
             }
         },
+        "/api/v1/orders/place": {
+            "post": {
+                "description": "Creates a new user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "Create user",
+                "parameters": [
+                    {
+                        "description": "Create User",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/http.placeOrderRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/http.placeOrderResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/securities/search": {
             "get": {
                 "description": "Retrieves a paginated list of securities matching the filter",
@@ -142,6 +194,28 @@
         }
     },
     "definitions": {
+        "http.OrderSide": {
+            "type": "integer",
+            "enum": [
+                0,
+                1
+            ],
+            "x-enum-varnames": [
+                "OrderSideBuy",
+                "OrderSideSell"
+            ]
+        },
+        "http.OrderType": {
+            "type": "integer",
+            "enum": [
+                0,
+                1
+            ],
+            "x-enum-varnames": [
+                "OrderTypeMarket",
+                "OrderTypeLimit"
+            ]
+        },
         "http.SearchSecuritiesResponse": {
             "type": "object",
             "properties": {
@@ -223,6 +297,50 @@
             "type": "object",
             "properties": {
                 "id": {
+                    "type": "string"
+                }
+            }
+        },
+        "http.placeOrderRequest": {
+            "type": "object",
+            "properties": {
+                "account_id": {
+                    "type": "string"
+                },
+                "account_number": {
+                    "type": "string"
+                },
+                "order_side": {
+                    "description": "Buy is 0 Sell is 1",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/http.OrderSide"
+                        }
+                    ]
+                },
+                "order_type": {
+                    "description": "Market is 0 Limit is 1",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/http.OrderType"
+                        }
+                    ]
+                },
+                "price": {
+                    "type": "number"
+                },
+                "quantity": {
+                    "type": "integer"
+                },
+                "ticker": {
+                    "type": "string"
+                }
+            }
+        },
+        "http.placeOrderResponse": {
+            "type": "object",
+            "properties": {
+                "orderId": {
                     "type": "string"
                 }
             }
